	the recipient at the same time.

	* c_src/make-specs-list: Historical XEPs are accepted; some are still
	used in Ejabberd for instance.

	* include/exmpp.hrl: The list of namespaces is now complete. A string
	version is added for each namespace too; this avoids calls to
	atom_to_list. Fix NS_ROSTER_EXCHANGE duplicated definitions.

2008-07-31  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: Fix documentation for
	parse_document_fragment/{1,2}. Add functions make_element/{1,2} and
	make_attribute/{1,2} to create simple nodes without knowing the
	records.

2008-07-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: Remove *_by_name suffix from function names.
	For example, get_element_by_name/2 is now get_element/2. For
	get_element/{2,3} and get_elements/{2,3}, aliases are still provided
	for backward compatibility, though they're marked as deprecated.
	element_ns_matches/2 was renamed to element_matches_by_ns/2 for
	consistency. Add remove_element/{2,3}, remove_elements/{2,3},
	remove_element_by_ns/2 and remove_elements_by_ns/2 functions.

	* src/core/exmpp_presence.erl (set_show): Fix by using the new
	remove_element function instead of the non-existing remove_child
	function.

	* Makefile.am, c_src/Makefile.am, testsuite/Makefile.am: updateknown
	and check-junit are PHONY targets.

	* Makefile.am: The distdir and any tarball may take a suffix.

	* configure.ac: Remove EXMPP_VERSION and relatives; they're not used
	anywhere. Add EXMPP_SVNREV which contains the Subversion revision of
	the checkout used by the configure script. Add EXMPP_DISTSUFFIX which
	is set to "-r$EXMPP_SVNREV" when this is not a release (the release
	isn't set).

	* src/compat/xml.erl, src/server/exmpp_server_compression.erl,
	src/server/exmpp_server_legacy_auth.erl,
	src/server/exmpp_server_binding.erl, src/core/exmpp_stream.erl,
	src/core/exmpp_stanza.erl, src/core/exmpp_message.erl,