@@ -1,5 +1,5 @@
 # $Id$
-# Generated by extract-known-from-specs r560 on 2008-07-23T13:47:57Z
+# Generated by extract-known-from-specs r560 on 2008-08-01T09:50:15Z
 # vim:ft=conf:
 
 # --------------------------------------------------------------------
@@ -154,6 +154,23 @@ signature-unverified
 bad-timestamp
 
 # --------------------------------------------------------------------
+# XEP:		XEP-0003
+# NAME:		Proxy Accept Socket Service (PASS)
+# URL:		http://www.xmpp.org/extensions/xep-0003.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2007-01-17
+
+# jabber:iq:pass
+query
+client
+close
+expire
+oneshot
+proxy
+server
+
+# --------------------------------------------------------------------
 # XEP:		XEP-0004
 # NAME:		Data Forms
 # URL:		http://www.xmpp.org/extensions/xep-0004.html
@@ -202,6 +219,19 @@ dateTime.iso8601
 array
 name
 data
+
+# --------------------------------------------------------------------
+# XEP:		XEP-0011
+# NAME:		Jabber Browsing
+# URL:		http://www.xmpp.org/extensions/xep-0011.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2004-11-12
+
+# jabber:iq:browse
+query
+item
+ns
 
 # --------------------------------------------------------------------
 # XEP:		XEP-0012
@@ -255,6 +285,33 @@ presence-out
 
 # http://jabber.org/protocol/feature-neg
 feature
+
+# --------------------------------------------------------------------
+# XEP:		XEP-0022
+# NAME:		Message Events
+# URL:		http://www.xmpp.org/extensions/xep-0022.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2007-09-26
+
+# jabber:x:event
+x
+offline
+delivered
+displayed
+composing
+id
+
+# --------------------------------------------------------------------
+# XEP:		XEP-0023
+# NAME:		Message Expiration
+# URL:		http://www.xmpp.org/extensions/xep-0023.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2004-10-18
+
+# jabber:x:expire
+x
 
 # --------------------------------------------------------------------
 # XEP:		XEP-0027
@@ -816,6 +873,31 @@ inactive
 paused
 
 # --------------------------------------------------------------------
+# XEP:		XEP-0090
+# NAME:		Entity Time
+# URL:		http://www.xmpp.org/extensions/xep-0090.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2007-03-28
+
+# jabber:iq:time
+query
+utc
+tz
+display
+
+# --------------------------------------------------------------------
+# XEP:		XEP-0091
+# NAME:		Delayed Delivery
+# URL:		http://www.xmpp.org/extensions/xep-0091.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2007-03-29
+
+# jabber:x:delay
+x
+
+# --------------------------------------------------------------------
 # XEP:		XEP-0092
 # NAME:		Software Version
 # URL:		http://www.xmpp.org/extensions/xep-0092.html
@@ -828,6 +910,19 @@ query
 name
 version
 os
+
+# --------------------------------------------------------------------
+# XEP:		XEP-0093
+# NAME:		Roster Item Exchange
+# URL:		http://www.xmpp.org/extensions/xep-0093.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2005-08-26
+
+# jabber:x:roster
+x
+item
+group
 
 # --------------------------------------------------------------------
 # XEP:		XEP-0095
@@ -1313,26 +1408,25 @@ stanzas
 # XEP:		XEP-0166
 # NAME:		Jingle
 # URL:		http://www.xmpp.org/extensions/xep-0166.html
-# STATUS:	Proposed
+# STATUS:	Experimental
 # TYPE:		Standards Track
-# DATE:		2008-06-16
+# DATE:		2008-07-31
 
 # urn:xmpp:tmp:jingle
 jingle
-content
-reason
-sid
-text
-condition
+alternative-session
 busy
 connectivity-error
 decline
 general-error
+invalid-credentials
 media-error
 no-error
 success
 unsupported-applications
 unsupported-transports
+sid
+text
 
 # urn:xmpp:tmp:jingle:errors
 out-of-order
@@ -1343,13 +1437,14 @@ unsupported-info
 # XEP:		XEP-0167
 # NAME:		Jingle RTP Sessions
 # URL:		http://www.xmpp.org/extensions/xep-0167.html
-# STATUS:	Proposed
+# STATUS:	Experimental
 # TYPE:		Standards Track
-# DATE:		2008-06-09
+# DATE:		2008-07-31
 
 # urn:xmpp:tmp:jingle:apps:rtp
 description
 payload-type
+crypto
 parameter
 
 # urn:xmpp:tmp:jingle:apps:rtp:info
@@ -1405,9 +1500,9 @@ nick
 # XEP:		XEP-0176
 # NAME:		Jingle ICE-UDP Transport Method
 # URL:		http://www.xmpp.org/extensions/xep-0176.html
-# STATUS:	Proposed
+# STATUS:	Experimental
 # TYPE:		Standards Track
-# DATE:		2008-06-04
+# DATE:		2008-07-31
 
 # urn:xmpp:tmp:jingle:transports:ice-udp
 transport
