@@ -1,5 +1,5 @@
 # $Id$
-# Generated by extract-known-from-specs r560 on 2008-07-23T13:47:57Z
+# Generated by extract-known-from-specs r560 on 2008-08-01T09:50:15Z
 # vim:ft=conf:
 
 # --------------------------------------------------------------------
@@ -34,6 +34,16 @@ urn:ietf:params:xml:ns:xmpp-session
 urn:ietf:params:xml:ns:xmpp-e2e
 
 # --------------------------------------------------------------------
+# XEP:		XEP-0003
+# NAME:		Proxy Accept Socket Service (PASS)
+# URL:		http://www.xmpp.org/extensions/xep-0003.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2007-01-17
+
+jabber:iq:pass
+
+# --------------------------------------------------------------------
 # XEP:		XEP-0004
 # NAME:		Data Forms
 # URL:		http://www.xmpp.org/extensions/xep-0004.html
@@ -52,6 +62,16 @@ jabber:x:data
 # DATE:		2006-02-09
 
 jabber:iq:rpc
+
+# --------------------------------------------------------------------
+# XEP:		XEP-0011
+# NAME:		Jabber Browsing
+# URL:		http://www.xmpp.org/extensions/xep-0011.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2004-11-12
+
+jabber:iq:browse
 
 # --------------------------------------------------------------------
 # XEP:		XEP-0012
@@ -92,6 +112,26 @@ jabber:iq:privacy
 # DATE:		2006-11-21
 
 http://jabber.org/protocol/feature-neg
+
+# --------------------------------------------------------------------
+# XEP:		XEP-0022
+# NAME:		Message Events
+# URL:		http://www.xmpp.org/extensions/xep-0022.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2007-09-26
+
+jabber:x:event
+
+# --------------------------------------------------------------------
+# XEP:		XEP-0023
+# NAME:		Message Expiration
+# URL:		http://www.xmpp.org/extensions/xep-0023.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2004-10-18
+
+jabber:x:expire
 
 # --------------------------------------------------------------------
 # XEP:		XEP-0027
@@ -349,6 +389,26 @@ urn:xmpp:avatar:metadata
 http://jabber.org/protocol/chatstates
 
 # --------------------------------------------------------------------
+# XEP:		XEP-0090
+# NAME:		Entity Time
+# URL:		http://www.xmpp.org/extensions/xep-0090.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2007-03-28
+
+jabber:iq:time
+
+# --------------------------------------------------------------------
+# XEP:		XEP-0091
+# NAME:		Delayed Delivery
+# URL:		http://www.xmpp.org/extensions/xep-0091.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2007-03-29
+
+jabber:x:delay
+
+# --------------------------------------------------------------------
 # XEP:		XEP-0092
 # NAME:		Software Version
 # URL:		http://www.xmpp.org/extensions/xep-0092.html
@@ -357,6 +417,16 @@ http://jabber.org/protocol/chatstates
 # DATE:		2007-02-16
 
 jabber:iq:version
+
+# --------------------------------------------------------------------
+# XEP:		XEP-0093
+# NAME:		Roster Item Exchange
+# URL:		http://www.xmpp.org/extensions/xep-0093.html
+# STATUS:	Deprecated
+# TYPE:		Historical
+# DATE:		2005-08-26
+
+jabber:x:roster
 
 # --------------------------------------------------------------------
 # XEP:		XEP-0095
@@ -584,9 +654,9 @@ urn:xmpp:tmp:abuse
 # XEP:		XEP-0166
 # NAME:		Jingle
 # URL:		http://www.xmpp.org/extensions/xep-0166.html
-# STATUS:	Proposed
+# STATUS:	Experimental
 # TYPE:		Standards Track
-# DATE:		2008-06-16
+# DATE:		2008-07-31
 
 urn:xmpp:tmp:jingle
 urn:xmpp:tmp:jingle:errors
@@ -595,9 +665,9 @@ urn:xmpp:tmp:jingle:errors
 # XEP:		XEP-0167
 # NAME:		Jingle RTP Sessions
 # URL:		http://www.xmpp.org/extensions/xep-0167.html
-# STATUS:	Proposed
+# STATUS:	Experimental
 # TYPE:		Standards Track
-# DATE:		2008-06-09
+# DATE:		2008-07-31
 
 urn:xmpp:tmp:jingle:apps:rtp
 urn:xmpp:tmp:jingle:apps:rtp:info
@@ -638,9 +708,9 @@ http://jabber.org/protocol/nick
 # XEP:		XEP-0176
 # NAME:		Jingle ICE-UDP Transport Method
 # URL:		http://www.xmpp.org/extensions/xep-0176.html
-# STATUS:	Proposed
+# STATUS:	Experimental
 # TYPE:		Standards Track
-# DATE:		2008-06-04
+# DATE:		2008-07-31
 
 urn:xmpp:tmp:jingle:transports:ice-udp
 
